[gd_scene load_steps=14 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://blast.tscn" type="PackedScene" id=2]
[ext_resource path="res://shipIzq0001.png" type="Texture" id=3]
[ext_resource path="res://shipIzq0002.png" type="Texture" id=4]
[ext_resource path="res://shipIzq0003.png" type="Texture" id=5]
[ext_resource path="res://shipIzq0004.png" type="Texture" id=6]
[ext_resource path="res://shipDer0006.png" type="Texture" id=7]
[ext_resource path="res://shipDer0007.png" type="Texture" id=8]
[ext_resource path="res://shipDer0008.png" type="Texture" id=9]
[ext_resource path="res://shipDer0009.png" type="Texture" id=10]
[ext_resource path="res://shipFrente.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": false,
"name": "left",
"speed": 3.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": false,
"name": "right",
"speed": 3.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": false,
"name": "front",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 30.4968
height = 29.6758

[node name="Player" type="Area2D"]
position = Vector2( 600, 300.83 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
rot_speed = 2.7
bullet = ExtResource( 2 )

[node name="spr_player" type="AnimatedSprite" parent="."]
position = Vector2( -0.902588, 0.218872 )
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 1 )
animation = "front"

[node name="coll_player" type="CollisionShape2D" parent="."]
position = Vector2( -0.496765, 0.830032 )
shape = SubResource( 2 )

[node name="laser_container" type="Node" parent="."]

[node name="muzzle" type="Position2D" parent="."]
position = Vector2( 0, -70.83 )
__meta__ = {
"_edit_group_": true
}

[node name="fire_rate_timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
